<resources>

    <!-- App IDs-->
    <string name="facebook_app_id">1853091478307992</string>

    <!-- String Resources -->
    <string name="app_name">Grocery</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="new_grocery_list">New Grocery List</string>
    <string name="sorry">Sorry!</string>
    <string name="no_group">You need to have a group to create a list.</string>
    <string name="new_request">New Request</string>
    <string name="leave_group">Leave group</string>
    <string name="are_you_sure_leave_group">Are you sure?\nYou will be able to rejoin only if another member adds you back.</string>
    <string name="add_a_member">Add a member</string>
    <string name="no_members_to_add">There are no more members to add to this group.</string>
    <string name="new_group">New Group</string>
    <string name="choose_media">Choose Media</string>
    <string name="welcome_back">Welcome back</string>
    <string name="hello">Hello</string>
    <string name="groups">Groups</string>
    <string name="lists">Lists</string>
    <string name="profile">Profile</string>
    <string name="delete_grocery_list">Delete grocery list?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="user_image">User Image</string>
    <string name="group_name">Group Name:</string>
    <string name="list_title">List Title:</string>
    <string name="group">Group:</string>
    <string name="item_name">Item Name:</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="change_image">Change Image</string>
    <string name="add">Add</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="icon">Icon</string>
    <string name="menu">Menu</string>
    <string name="one_member">1 Member</string>
    <string name="no_members">No Members</string>
    <string name="members">Members</string>
    <string name="left_soger">(</string>
    <string name="right_soger">)</string>
    <string name="dot">.</string>
    <string name="description_limiter">,</string>
    <string name="three_dots">…</string>
    <string name="empty_string"></string>
    <string name="done">Done</string>
    <string name="profile_user_name_tv_font_family">sans-serif-light</string>

</resources>