<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm"
        android:src="@drawable/v"
        android:background="@null"
        android:layout_marginTop="@dimen/confirm_btn_margin_top"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/confirm_btn_margin_bottom"
        android:contentDescription="@string/confirm" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/list_title"
        android:id="@+id/textView"
        android:layout_marginTop="@dimen/input_tv_margin_top"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/input_tv_margin_left" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listTitleText"
        android:layout_marginRight="@dimen/input_et_margin_right"
        android:layout_marginLeft="@dimen/input_et_margin_left"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView"
        android:singleLine="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginTop="@dimen/combo_box_margin_top"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/listTitleText"
        android:layout_alignEnd="@+id/listTitleText"
        android:layout_toEndOf="@+id/textView3"
        android:layout_alignStart="@+id/listTitleText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/group"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignStart="@+id/textView" />

</RelativeLayout>
