<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_cell"
    android:padding="@dimen/padding_cell" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userImageView"
        android:src="@drawable/user"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:layout_toStartOf="@+id/itemName"
        android:visibility="invisible"
        android:layout_alignTop="@+id/pleaseWait"
        android:layout_alignEnd="@+id/pleaseWait"
        android:layout_alignBottom="@+id/pleaseWait"
        android:contentDescription="@string/user_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty_string"
        android:id="@+id/itemName"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/userName"
        android:textColor="@color/cell_text_color"
        android:layout_gravity="right"
        android:gravity="left"
        android:singleLine="true"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/v"
        android:layout_marginTop="@dimen/tv_margin_top" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pleaseWait"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/v"
        android:layout_alignBottom="@+id/userName"
        android:layout_marginTop="@dimen/progress_bar_margin_top"
        android:layout_marginBottom="@dimen/progress_bar_margin_bottom"
        android:indeterminate="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:visibility="invisible"
        android:layout_alignTop="@+id/itemName"
        android:gravity="center"
        android:singleLine="true"
        android:layout_toEndOf="@+id/userImageView"
        android:layout_toStartOf="@+id/v"
        android:layout_centerVertical="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v"
        android:src="@drawable/com_facebook_button_like_icon_selected"
        android:scaleType="centerInside"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="finishedEditing"
        android:visibility="invisible"
        android:layout_above="@+id/userName"
        android:contentDescription="@string/done" />

</RelativeLayout>